[gd_scene load_steps=19 format=2]

[ext_resource path="res://themes/fontKremlin_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/levelUI.gd" type="Script" id=2]
[ext_resource path="res://themes/fontKremlin_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://themes/fontKremlin_96.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/exitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/buttonHover.tres" type="StyleBox" id=6]
[ext_resource path="res://themes/buttonPressed.tres" type="StyleBox" id=7]
[ext_resource path="res://themes/buttonFocus.tres" type="StyleBox" id=8]
[ext_resource path="res://themes/buttonDisabled.tres" type="StyleBox" id=9]
[ext_resource path="res://themes/buttonNormal.tres" type="StyleBox" id=10]
[ext_resource path="res://scenes/ui/gameSettings.tscn" type="PackedScene" id=11]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.298039, 0, 0, 1 )

[sub_resource type="Theme" id=6]
default_font = ExtResource( 4 )

[sub_resource type="GDScript" id=7]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func _on_options_pressed():
	get_owner().get_node(\"gameSettings\").visible = true
"

[node name="levelUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -500.0

[node name="Label" type="Label" parent="enemies"]
margin_left = 572.0
margin_top = 96.0
margin_right = 708.0
margin_bottom = 124.0
theme = SubResource( 1 )
text = "ENEMIGOS:"
uppercase = true

[node name="restart" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="Label" type="Label" parent="restart"]
margin_left = 452.0
margin_top = 346.0
margin_right = 827.0
margin_bottom = 374.0
text = "\"R\" PARA VOLVER A EMPEZAR"
uppercase = true

[node name="nextLevel" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="Label" type="Label" parent="nextLevel"]
margin_left = 506.0
margin_top = 330.0
margin_right = 774.0
margin_bottom = 389.0
text = "\"R\" PARA CONTINUAR
"
uppercase = true

[node name="playerUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 425.0
margin_top = 550.0
margin_right = -425.0
margin_bottom = -100.0
theme = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="playerUI"]
margin_right = 430.0
margin_bottom = 70.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="playerUI/VBoxContainer"]
margin_right = 430.0
margin_bottom = 33.0
size_flags_vertical = 7

[node name="weapon" type="Label" parent="playerUI/VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 213.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "ARMA:"
uppercase = true

[node name="ammo" type="Label" parent="playerUI/VBoxContainer/HBoxContainer"]
margin_left = 217.0
margin_top = 9.0
margin_right = 430.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "MUNICION:"
uppercase = true

[node name="health" type="ProgressBar" parent="playerUI/VBoxContainer"]
margin_top = 37.0
margin_right = 430.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false

[node name="pauseMenu" type="Panel" parent="."]
pause_mode = 2
visible = false
self_modulate = Color( 1, 1, 1, 0.443137 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="pauseMenu"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="pauseMenu/CenterContainer"]
pause_mode = 2
margin_left = 472.0
margin_top = 274.0
margin_right = 807.0
margin_bottom = 446.0

[node name="Label" type="Label" parent="pauseMenu/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_right = 335.0
margin_bottom = 108.0
text = "PAUSA"
uppercase = true

[node name="exit" parent="pauseMenu/CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
pause_mode = 2
margin_top = 112.0
margin_right = 335.0
margin_bottom = 140.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
text = "MENU PRINCIPAL"

[node name="options" parent="pauseMenu/CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
pause_mode = 2
margin_top = 144.0
margin_right = 335.0
margin_bottom = 172.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
text = "OPCIONES"
script = SubResource( 7 )

[node name="gameSettings" parent="." instance=ExtResource( 11 )]
visible = false
[connection signal="pressed" from="pauseMenu/CenterContainer/VBoxContainer/options" to="pauseMenu/CenterContainer/VBoxContainer/options" method="_on_options_pressed"]
